[package]
name = "crabots"
version = "0.1.0"
authors = ["Ilya Sheprut <optitel223@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_pcg = "0.2"
ggez = "0.5"
color-backtrace = { version = "0.3" }